fix wrong active coloring on mobile menu

--- a/module-ui/src/app/common/header/header-mobile/header-mobile.component.scss
+++ b/module-ui/src/app/common/header/header-mobile/header-mobile.component.scss
@@ -24,7 +24,7 @@ mat-toolbar {
 
   &.selected {
     color: var(--mat-sys-primary) !important;
-    border-bottom: solid var(--mat-sys-primary);
+    border-left: solid var(--mat-sys-primary);
     margin-left: 0;
     mat-icon {
       font-variation-settings: 'FILL' 1;
